# p4-radio

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/esp_lcd_st7703/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  display.c  display.h  font8x16.c  font8x16.h  idf_component.yml  main.c  mp3_decoder.c  mp3_decoder.h  radio_browser.c  radio_browser.h  spectrum.c  spectrum.h  stream.c  stream.h  touch.c  touch.h  wifi.c  wifi.h
